--- a/Exception handling/exceptionhandle.ipynb
+++ b/Exception handling/exceptionhandle.ipynb
@@ -216,6 +216,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file does not exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "### File handling and Exception Handling\n",
+    "\n",
+    "try:\n",
+    "    file = open(\"example.txt\", \"r\")\n",
+    "    content = file.read()\n",
+    "    print(content)\n",
+    "except FileNotFoundError:\n",
+    "    print(\"The file does not exists\")\n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "finally:\n",
+    "    if 'file' in locals() and  not file.closed():\n",
+    "        file.close()\n",
+    "        print(\"File closed\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
